--- a/nic_z_tego_nie_bd/nic_z_tego_nie_bd.csproj
+++ b/nic_z_tego_nie_bd/nic_z_tego_nie_bd.csproj
@@ -11,6 +11,16 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="Resources\iconof.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Resources\iconof.png">
+      <CustomToolNamespace></CustomToolNamespace>
+    </Resource>
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Update="Properties\Resources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
@@ -25,7 +35,7 @@
 
   <ItemGroup>
     <EmbeddedResource Update="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
+      <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
