--- a/nic_z_tego_nie_bd/Properties/Settings.settings
+++ b/nic_z_tego_nie_bd/Properties/Settings.settings
@@ -8,5 +8,8 @@
     <Setting Name="items" Type="System.String" Scope="User">
       <Value Profile="(Default)">none</Value>
     </Setting>
+    <Setting Name="UpgradeRequired" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
