--- a/nic_z_tego_nie_bd/nic_z_tego_nie_bd.csproj
+++ b/nic_z_tego_nie_bd/nic_z_tego_nie_bd.csproj
@@ -6,14 +6,20 @@
     <UseWindowsForms>true</UseWindowsForms>
     <ApplicationIcon />
     <Win32Resource />
-    <SignAssembly>false</SignAssembly>
+    <SignAssembly>true</SignAssembly>
     <AssemblyVersion>1.1.0.0</AssemblyVersion>
     <FileVersion>1.1.0.0</FileVersion>
-    <Version>1.1.0</Version>
+    <Version>1.2.0</Version>
+    <DelaySign>false</DelaySign>
+    <AssemblyOriginatorKeyFile>ReleaseSMH.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
   <ItemGroup>
     <Compile Remove="coreF.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="ITR" Version="1.3.0" />
   </ItemGroup>
 
   <ItemGroup>
