--- a/nic_z_tego_nie_bd/nic_z_tego_nie_bd.csproj
+++ b/nic_z_tego_nie_bd/nic_z_tego_nie_bd.csproj
@@ -7,9 +7,9 @@
     <ApplicationIcon />
     <Win32Resource />
     <SignAssembly>true</SignAssembly>
-    <AssemblyVersion>1.1.0.0</AssemblyVersion>
-    <FileVersion>1.1.0.0</FileVersion>
-    <Version>1.2.0</Version>
+    <AssemblyVersion>1.3.0.0</AssemblyVersion>
+    <FileVersion>1.3.0.0</FileVersion>
+    <Version>1.3.0</Version>
     <DelaySign>false</DelaySign>
     <AssemblyOriginatorKeyFile>ReleaseSMH.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
@@ -19,7 +19,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="ITR" Version="1.3.0" />
+    <PackageReference Include="ITR" Version="1.4.1" />
+    <PackageReference Include="SharpNBT" Version="1.2.0" />
   </ItemGroup>
 
   <ItemGroup>
