Features better AH

--- a/nic_z_tego_nie_bd/Properties/Settings.settings
+++ b/nic_z_tego_nie_bd/Properties/Settings.settings
@@ -6,10 +6,13 @@
       <Value Profile="(Default)">Settings</Value>
     </Setting>
     <Setting Name="items" Type="System.String" Scope="User">
-      <Value Profile="(Default)">none</Value>
+      <Value Profile="(Default)">null</Value>
     </Setting>
     <Setting Name="UpgradeRequired" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="BetterAHQuery" Type="System.String" Scope="User">
+      <Value Profile="(Default)">null</Value>
     </Setting>
   </Settings>
 </SettingsFile>
