--- a/nic_z_tego_nie_bd/Properties/Settings.settings
+++ b/nic_z_tego_nie_bd/Properties/Settings.settings
@@ -14,5 +14,14 @@
     <Setting Name="BetterAHQuery" Type="System.String" Scope="User">
       <Value Profile="(Default)">null</Value>
     </Setting>
+    <Setting Name="easterEggs" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">null</Value>
+    </Setting>
+    <Setting Name="itemsUCsize" Type="System.UInt32" Scope="User">
+      <Value Profile="(Default)">34</Value>
+    </Setting>
+    <Setting Name="playSound" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
