--- a/nic_z_tego_nie_bd/Properties/Settings.settings
+++ b/nic_z_tego_nie_bd/Properties/Settings.settings
@@ -14,8 +14,8 @@
     <Setting Name="BetterAHQuery" Type="System.String" Scope="User">
       <Value Profile="(Default)">null</Value>
     </Setting>
-    <Setting Name="easterEggs" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">null</Value>
+    <Setting Name="easterEggs" Type="System.String" Scope="User">
+      <Value Profile="(Default)">Yoo</Value>
     </Setting>
     <Setting Name="itemsUCsize" Type="System.UInt32" Scope="User">
       <Value Profile="(Default)">34</Value>
