--- a/.gitignore
+++ b/.gitignore
@@ -362,3 +362,4 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 /nic_z_tego_nie_bd/Properties/PublishProfiles
+/nic_z_tego_nie_bd/ReleaseSMH.snk
